#278 frontend alert z-index issue fix

--- a/templates/shaper_helixultimate/scss/theme.scss
+++ b/templates/shaper_helixultimate/scss/theme.scss
@@ -2209,6 +2209,7 @@ body.com-content.view-form.layout-edit .nav-tabs .nav-link {
   bottom: 0px;
   right: 15px;
   max-width: 350px;
+  z-index: 9999;
   .alert {
     font-size: 13px;
     line-height: 1.5;
